tests/generics/error.txt
Validation error: ./tests/generics/generics.fae, line 4: Expected argument of type `Above<T, T>`, got `Above<T, i32>`
  4|     below<T>(Above<T, i32> {
                  ^^^^^^^^^^^^^^^^

Validation error: ./tests/generics/generics.fae, line 28: Field intializer type mismatch, expected `Below<i32>` but got `Below<f32>` instead
  28|         below: Below<f32> {
              ^^^^^^^^^^^^^^^^^^^^

Validation error: ./tests/generics/generics.fae, line 37: Expected argument of type `u64`, got `untyped decimal`
  37|     above<u64>(44.5, Below<i64> {
                     ^^^^

Validation error: ./tests/generics/generics.fae, line 37: Expected argument of type `Below<u64>`, got `Below<i64>`
  37|     above<u64>(44.5, Below<i64> {
                           ^^^^^^^^^^^^^
